<resources>
    <string name="app_name">Tower Power</string>
    <string name="title_activity_tower_details">Tower Details</string>
    <string name="title_activity_settings">Tower Power Settings</string>
    <string name="action_settings">Settings</string>

    <string name="retrieving_tower_info">Retrieving cell tower information…</string>

    <string name="verizon">Verizon</string>
    <string name="at_t">AT&amp;T</string>
    <string name="sprint">Sprint</string>
    <string name="t_mobile">T-Mobile</string>

    <!-- Tower Details -->
    <string name="no_data">No data</string>
    <string name="network_speed_s">%s kbps</string>
    <string name="network_type_s">%sG</string>
    <string name="ping_time_s">%s ms</string>
    <string name="reliability_s">%s%%</string>
    <string name="rssi_asu_s">%s asu</string>
    <string name="rssi_db_s">%s dBm</string>
    <string name="tower_network_desc" translatable="false">tower_network_type</string>

    <!-- Tower Detail Labels -->
    <string name="average_rssi_asu_label">Average RSSI (asu)</string>
    <string name="average_rssi_db_label">Average RSSI (db)</string>
    <string name="download_speed_label">Download Speed</string>
    <string name="pint_time_label">Ping Time</string>
    <string name="reliability_label">Reliability</string>
    <string name="sample_size_label">RSSI Sample Size</string>
    <string name="upload_speed_label">Upload Speed</string>

    <!-- Tower About Dialogs -->
    <string name="about_download_title">About Download Speed</string>
    <string name="about_download_message">The average download speed in kbps (kilobits per second)</string>
    <string name="about_ping_title">About Ping Time</string>
    <string name="about_ping_message">The average ping time in milliseconds</string>
    <string name="about_reliability_title">About Reliability</string>
    <string name="about_reliability_message">This is a measure of the proportion of time that a
        data connection is possible.</string>
    <string name="about_rssi_asu_title">About Average RSSI (asu)</string>
    <string name="about_rssi_asu_message">The average Received Signal Strength Indicator (RSSI) is a measure
        of power present in a tower\'s signal. Arbitrary Strength Unit (ASU) is one such way of measuring RSSI.
        A stronger signal has a higher RSSI.</string>
    <string name="about_rssi_db_title">About Average RSSI (dBm)</string>
    <string name="about_rssi_db_message">The average Received Signal Strength Indicator (RSSI) is a measure
        of power present in a tower\'s signal. Decibel milli-watts (dBm) is one such way of measuring RSSI.
        A stronger signal has a higher RSSI.</string>
    <string name="about_sample_title">About RSSI Sample Size</string>
    <string name="about_sample_message">The number of inputs used to determine the average RSSI</string>
    <string name="about_upload_title">About Upload Speed</string>
    <string name="about_upload_message">The average upload speed in kpbs (kilobits per second)</string>

    <!-- GPS Dialog -->
    <string name="gps_not_enabled_title">GPS Settings</string>
    <string name="gps_not_enabled_message">GPS is not enabled. Do you want to go to settings menu?</string>

    <string name="loading_cell_towers">Loading cell towers in your area…</string>
    <string name="new_towers">There are new towers!</string>

    <!-- Distance preference -->
    <string name="pref_distance_key">distance</string>
    <string name="pref_distance_title">Distance</string>
    <string name="pref_distance_default">10</string>
    <string name="pref_distance_km">%s km</string>
    <string name="pref_distance_mi">%s mi</string>
    <string name="pref_distance_mi_error">The distance must be 6 miles or less</string>
    <string name="pref_distance_km_error">The distance must be 10 kilometers or less</string>

    <!-- Distance units preference -->
    <string name="pref_units_label">Distance Units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_kilometer" translatable="false">kilometers</string>
    <string name="pref_units_mile" translatable="false">miles</string>
    <string name="pref_units_label_kilometer">Kilometers</string>
    <string name="pref_units_label_mile">Miles</string>

    <!-- Notifications preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Tower Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="pref_last_notification" translatable="false">last_notification</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">towerpower.riis.com</string>
    <string name="content_authority">com.riis.towerpower</string>
</resources>
