<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="@string/pref_distance_key"
        android:title="@string/pref_distance_title"
        android:defaultValue="@string/pref_distance_default"
        android:inputType="numberDecimal"
        android:singleLine="true"/>

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label"
        android:defaultValue="@string/pref_units_kilometer"
        android:entryValues="@array/pref_units_values"
        android:entries="@array/pref_units_options"/>

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default"/>
</PreferenceScreen>