<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/network_name_image_view"
            android:contentDescription="@string/tower_network_desc"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/network_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/network_type_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical|end"
            android:textSize="20sp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/reliability_row"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:background="@drawable/list_item_background">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/reliability_label"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/reliability_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center_vertical|end"
                    android:textSize="16sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:id="@+id/rssi_asu_row"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:background="@drawable/list_item_background">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/average_rssi_asu_label"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/average_rssi_asu_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center_vertical|end"
                    android:textSize="16sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:id="@+id/rssi_db_row"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:background="@drawable/list_item_background">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/average_rssi_db_label"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/average_rssi_db_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center_vertical|end"
                    android:textSize="16sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:id="@+id/sample_row"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:background="@drawable/list_item_background">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/sample_size_label"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/sample_rssi_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center_vertical|end"
                    android:textSize="16sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:id="@+id/download_row"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:background="@drawable/list_item_background">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/download_speed_label"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/download_speed_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center_vertical|end"
                    android:textSize="16sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:id="@+id/upload_row"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:background="@drawable/list_item_background">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/upload_speed_label"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/upload_speed_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center_vertical|end"
                    android:textSize="16sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:id="@+id/ping_row"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:background="@drawable/list_item_background">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/pint_time_label"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/ping_time_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center_vertical|end"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>